gvfsdaemon: properly remove socket_dir

When not using abstract sockets, gvfs tries to rmdir the socket
directory but it still contains the socket so the call fails.
We now make sure to remove the socket first.

https://bugzilla.gnome.org/show_bug.cgi?id=720482